--- a/.github/workflows/0-welcome.yml
+++ b/.github/workflows/0-welcome.yml
@@ -1,10 +1,9 @@
-name: Step 0, Welcome
-
-# This step triggers after the learner creates a new repository from the template.
-# This workflow updates from step 0 to step 1.
-
-# This will run every time we create push a commit to `main`.
-# Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
+name: Post welcome comment
+on:
+  pull_request:
+    types: [opened]
+permissions:
+  pull-requests: write
 on:
   workflow_dispatch:
   push:
@@ -83,7 +82,7 @@ jobs:
 
       # In README.md, switch step 0 for step 1.
       - name: Update to step 1
-        uses: skills/action-update-step@v2
+        uses: skills/action-update-step@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 0
