--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -1,10 +1,9 @@
-name: Step 1, Create a workflow
-
-# This step triggers after every push to welcome-workflow.
-# This workflow updates from step 1 to step 2.
-
-# This will run every time we push to welcome-workflow.
-# Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
+name: Post welcome comment
+on:
+  pull_request:
+    types: [opened]
+permissions:
+  pull-requests: write
 on:
   workflow_dispatch:
   push:
@@ -24,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       - id: get_step
         run: |
           echo "current_step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
