--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - welcome-workflow
+      - main
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
